--- a/packages/web/content/docs/tabs.mdx
+++ b/packages/web/content/docs/tabs.mdx
@@ -6,7 +6,7 @@ category: components
 
 # Tabs
 
-A Tabs is a non-intrusive, brief notification that provides feedback or updates without disrupting the user’s workflow.
+Tabs organize content into multiple sections, allowing users to navigate between them without leaving the page.
 
 ## Usage
 
@@ -56,15 +56,16 @@ Tabss come in different variants to match your design needs.
 
 ## Design Guidelines
 
-- Keep messages concise and action-oriented.
-- Position toasts consistently, typically at the top-right or bottom-center of the screen.
-- Use appropriate colors to reflect the message type (e.g., success, error, info, warning).
-- Auto-dismiss toasts after a few seconds, with an option for manual dismissal.
-- Ensure toasts are responsive and do not obscure critical content.
+- Use clear, descriptive labels for each tab to convey its content.
+- Ensure the active tab is visually distinct and easy to identify.
+- Maintain consistent spacing and alignment for tab labels.
+- Keep content panels lightweight and directly related to the selected tab.
+- Allow keyboard navigation with `Tab` and arrow keys, and visually indicate focus.
 
 ## Accessibility
 
-- Configurable timeouts for automatic removal.
-- Allows buttons or links within the toast.
-- Displays multiple toasts in an organized, non-overlapping manner.
-- Includes ARIA roles and proper focus management for usability.
+- Switches between content sections seamlessly.
+- Supports active, hover, and disabled states.
+- Horizontal, vertical, or collapsible tabs.
+- Fully navigable via keyboard shortcuts.
+- Adapts gracefully to various screen sizes and orientations.
