fix [combobox and examples and toast]

--- a/packages/web/content/docs/command-box.mdx
+++ b/packages/web/content/docs/command-box.mdx
@@ -10,50 +10,11 @@ A command box is a non-intrusive, brief notification that provides feedback or u
 
 ## Usage
 
-## Examples
+<ComponentPreview name='command_box' />
 
-### Variants
+### With dialog box
 
-Buttons come in different variants to match your design needs.
-
-<Tabs defaultValue='default'>
-    <TabsList>
-        <TabsTrigger value='success'>Success</TabsTrigger>
-        <TabsTrigger value='error'>Error</TabsTrigger>
-        <TabsTrigger value='warning'>Warning</TabsTrigger>
-        <TabsTrigger value='info'>Info</TabsTrigger>
-    </TabsList>
-    <TabsContent value='success'>
-        <ComponentPreview
-        name='button'
-        />
-    </TabsContent>
-    <TabsContent value='error'>
-        <ComponentPreview
-        name='secondary_button'
-        />
-    </TabsContent>
-    <TabsContent value='warning'>
-        <ComponentPreview
-        name='gradient_button'
-        />
-    </TabsContent>
-    <TabsContent value='info'>
-        <ComponentPreview
-        name='ghost_button'
-        />
-    </TabsContent>
-</Tabs>
-
-## Props
-
-| Prop        | Type                                                         | Default     | Description                                                |
-| ----------- | ------------------------------------------------------------ | ----------- | ---------------------------------------------------------- |
-| `variant`   | `'success' \| 'error' \| 'warning' \| 'info'`                | `'default'` | The visual style of the button                             |
-| `message`   | `string`                                                     | -           | Shows the number of pages shown at the same time           |
-| `type`      | `ToastType`                                                  | -           | Shows the number of pages shown at the same time           |
-| `duration`  | `number`                                                     | -           | Shows the number of pages shown at the same time           |
-| `id`        | `number`                                                     | -           | Additional CSS classes                                     |
+<ComponentPreview name='command_box_dialog' />
 
 ## Design Guidelines
 
