--- a/packages/web/content/docs/dialog.mdx
+++ b/packages/web/content/docs/dialog.mdx
@@ -10,40 +10,7 @@ A Dialog is a modal UI element used to capture attention and display important c
 
 ## Usage
 
-## Examples
-
-### Variants
-
-Dialog come in different variants to match your design needs.
-
-<Tabs defaultValue='default'>
-    <TabsList>
-        <TabsTrigger value='success'>Success</TabsTrigger>
-        <TabsTrigger value='error'>Error</TabsTrigger>
-        <TabsTrigger value='warning'>Warning</TabsTrigger>
-        <TabsTrigger value='info'>Info</TabsTrigger>
-    </TabsList>
-    <TabsContent value='success'>
-        <ComponentPreview
-        name='button'
-        />
-    </TabsContent>
-    <TabsContent value='error'>
-        <ComponentPreview
-        name='secondary_button'
-        />
-    </TabsContent>
-    <TabsContent value='warning'>
-        <ComponentPreview
-        name='gradient_button'
-        />
-    </TabsContent>
-    <TabsContent value='info'>
-        <ComponentPreview
-        name='ghost_button'
-        />
-    </TabsContent>
-</Tabs>
+<ComponentPreview name='dialog' />
 
 ## Props
 
