--- a/packages/web/content/docs/tooltip.mdx
+++ b/packages/web/content/docs/tooltip.mdx
@@ -10,50 +10,37 @@ A Tooltip is a small, contextual UI element that displays additional information
 
 ## Usage
 
-## Examples
+<ComponentPreview name='tooltip' />
 
-### Variants
+The tooltip component needs to be used inside the `<TooltipProvider>`. Wrap your root layout with 
+the `<TooltipProvider>` as shown below:
 
-Tooltipss come in different variants to match your design needs.
+```tsx
+import { TooltipProvider } from '@fatcn/ui';
 
-<Tabs defaultValue='default'>
-    <TabsList>
-        <TabsTrigger value='success'>Success</TabsTrigger>
-        <TabsTrigger value='error'>Error</TabsTrigger>
-        <TabsTrigger value='warning'>Warning</TabsTrigger>
-        <TabsTrigger value='info'>Info</TabsTrigger>
-    </TabsList>
-    <TabsContent value='success'>
-        <ComponentPreview
-        name='button'
-        />
-    </TabsContent>
-    <TabsContent value='error'>
-        <ComponentPreview
-        name='secondary_button'
-        />
-    </TabsContent>
-    <TabsContent value='warning'>
-        <ComponentPreview
-        name='gradient_button'
-        />
-    </TabsContent>
-    <TabsContent value='info'>
-        <ComponentPreview
-        name='ghost_button'
-        />
-    </TabsContent>
-</Tabs>
+export default function RootLayout({
+  children,
+}: Readonly<{
+  children: React.ReactNode;
+}>) {
+  return (
+    <html lang="en">
+      <body>
+        <TooltipProvider>
+            {children}
+        </TooltipProvider>
+      </body>
+    </html>
+  );
+}
+```
+
 
 ## Props
 
-| Prop        | Type                                                         | Default     | Description                                                |
-| ----------- | ------------------------------------------------------------ | ----------- | ---------------------------------------------------------- |
-| `variant`   | `'success' \| 'error' \| 'warning' \| 'info'`                | `'default'` | The visual style of the button                             |
-| `message`   | `string`                                                     | -           | Shows the number of pages shown at the same time           |
-| `type`      | `ToastType`                                                  | -           | Shows the number of pages shown at the same time           |
-| `duration`  | `number`                                                     | -           | Shows the number of pages shown at the same time           |
-| `id`        | `number`                                                     | -           | Additional CSS classes                                     |
+| Prop        | Type                                                         | Description                                                |
+| ----------- | ------------------------------------------------------------ | ---------------------------------------------------------- |
+| `className` | `string`                                                     | The className to be passed to the tooltip                  |
 
 ## Design Guidelines
 
