ui and component fixes

--- a/packages/web/content/docs/avatar.mdx
+++ b/packages/web/content/docs/avatar.mdx
@@ -46,7 +46,7 @@ Available in different sizes to fit your layout.
 Avatars can have an optional border which can be enabled with the `ring` prop. This ring borrows its
 color from the `--ring` variable configured in your `global.css` file.
 
-
+<ComponentPreview name='avatar_with_ring' />
 
 ## Props
 
