fix [@fatcn/ui -> fatcn-ui imports]

--- a/packages/web/content/docs/tooltip.mdx
+++ b/packages/web/content/docs/tooltip.mdx
@@ -16,7 +16,7 @@ The tooltip component needs to be used inside the `<TooltipProvider>`. Wrap your
 the `<TooltipProvider>` as shown below:
 
 ```tsx
-import { TooltipProvider } from '@fatcn/ui';
+import { TooltipProvider } from 'fatcn-ui';
 
 export default function RootLayout({
   children,
