--- a/packages/web/content/docs/avatar.mdx
+++ b/packages/web/content/docs/avatar.mdx
@@ -7,6 +7,13 @@ category: components
 # Avatar
 
 An avatar component represents a user or entity through an image, initials, or icon.
+
+## Installation 
+
+```bash
+npx fatcn-ui add avatar
+```
+
 ## Usage
 
 <ComponentPreview name='circle_avatar' />
