--- a/packages/web/content/docs/callout.mdx
+++ b/packages/web/content/docs/callout.mdx
@@ -8,6 +8,12 @@ category: components
 
 A Callout is a UI element designed to grab attention and highlight important information. 
 
+## Installation 
+
+```bash
+npx fatcn-ui add callout
+```
+
 ## Usage
 
 <ComponentPreview name="callout" />
