--- a/packages/web/content/docs/card.mdx
+++ b/packages/web/content/docs/card.mdx
@@ -8,6 +8,12 @@ category: components
 
 The card component is a versatile container that groups related content and actions about a single subject.
 
+## Installation 
+
+```bash
+npx fatcn-ui add card
+```
+
 ## Usage
 
 <ComponentPreview name='card' />
