--- a/packages/web/content/docs/checkbox.mdx
+++ b/packages/web/content/docs/checkbox.mdx
@@ -8,6 +8,12 @@ category: components
 
 A button component that follows best practices for accessibility and provides multiple variants for different use cases.
 
+## Installation 
+
+```bash
+npx fatcn-ui add checkbox
+```
+
 ## Usage
 
 <ComponentPreview name='checkbox' />
