--- a/packages/web/content/docs/dialog.mdx
+++ b/packages/web/content/docs/dialog.mdx
@@ -8,6 +8,12 @@ category: components
 
 A Dialog is a modal UI element used to capture attention and display important content or actions, often requiring user interaction.
 
+## Installation 
+
+```bash
+npx fatcn-ui add dialog
+```
+
 ## Usage
 
 <ComponentPreview name='dialog' />
