--- a/packages/web/content/docs/dropdown.mdx
+++ b/packages/web/content/docs/dropdown.mdx
@@ -8,6 +8,12 @@ category: components
 
 A Dropdown is a UI element that displays a list of options or actions when triggered, allowing users to select one or perform an action.
 
+## Installation 
+
+```bash
+npx fatcn-ui add dropdown
+```
+
 ## Usage
 
 <ComponentPreview name='dropdown' />
