--- a/packages/web/content/docs/pagination.mdx
+++ b/packages/web/content/docs/pagination.mdx
@@ -8,6 +8,12 @@ category: components
 
 A pagination allows users to navigate large datasets by breaking content into manageable chunks or pages.
 
+## Installation 
+
+```bash
+npx fatcn-ui add pagination
+```
+
 ## Usage
 
 <ComponentPreview name='pagination' />
