--- a/packages/web/content/docs/tabs.mdx
+++ b/packages/web/content/docs/tabs.mdx
@@ -8,6 +8,12 @@ category: components
 
 Tabs organize content into multiple sections, allowing users to navigate between them without leaving the page.
 
+## Installation 
+
+```bash
+npx fatcn-ui add tabs
+```
+
 ## Usage
 
 <ComponentPreview name='tabs' />
