--- a/packages/web/content/docs/toast.mdx
+++ b/packages/web/content/docs/toast.mdx
@@ -8,6 +8,12 @@ category: components
 
 A Toast is a non-intrusive, brief notification that provides feedback or updates without disrupting the user’s workflow.
 
+## Installation 
+
+```bash
+npx fatcn-ui add toast
+```
+
 ## Usage
 
 <ComponentPreview name='toast' />
