--- a/packages/web/content/docs/tooltip.mdx
+++ b/packages/web/content/docs/tooltip.mdx
@@ -8,6 +8,12 @@ category: components
 
 A Tooltip is a small, contextual UI element that displays additional information when users hover over, focus on, or interact with a target element.
 
+## Installation 
+
+```bash
+npx fatcn-ui add tooltip
+```
+
 ## Usage
 
 <ComponentPreview name='tooltip' />
