--- a/packages/web/content/docs/command-box.mdx
+++ b/packages/web/content/docs/command-box.mdx
@@ -8,6 +8,12 @@ category: components
 
 A command box is a non-intrusive, brief notification that provides feedback or updates without disrupting the user’s workflow.
 
+## Installation 
+
+```bash
+npx fatcn-ui add command-box
+```
+
 ## Usage
 
 <ComponentPreview name='command_box' />
