--- a/packages/web/content/docs/table.mdx
+++ b/packages/web/content/docs/table.mdx
@@ -8,6 +8,11 @@ category: components
 
 A Table is a structured UI component used to display data in rows and columns for easy comparison and analysis.
 
+## Installation 
+
+```bash
+npx fatcn-ui add table
+```
 
 ## Usage
 
