remove [add notice]

--- a/packages/web/content/docs/installation.mdx
+++ b/packages/web/content/docs/installation.mdx
@@ -23,7 +23,14 @@ This command will:
 3. Add required styles to your `global.css` file
 4. Update your `tailwind.config.ts` with the required configuration
 ```
+## add
 
+You can add individual components with this command:
+
+```bash
+npx fatcn-ui add button
+```
+This will also install any necessary dependencies required by the component. 
 ## Example Usage
 
 ```tsx
