--- a/packages/web/content/docs/how-it-works.mdx
+++ b/packages/web/content/docs/how-it-works.mdx
@@ -16,9 +16,12 @@ When you run the installation command, fatcn performs several automated steps:
 
 Fatcn looks for a `components` directory in your project root. If it doesn't find one, it automatically creates it. All UI components are then copied into this directory.
 
-<Callout>
-Currently fatcn doesn't support adding components one by one. It installs everything in one go. You can choose to delete the components you don't need. The `add` command is in the works.
-</Callout>
+You can also add components individually with the `add` command. 
+
+```bash
+npx fatcn-ui add button
+```
+
 
 ### Tailwind Configuration
 
