add [donate and pixel css]

--- a/packages/web/content/docs/accordion.mdx
+++ b/packages/web/content/docs/accordion.mdx
@@ -6,7 +6,7 @@ category: components
 
 # Accordion
 
-An avatar component represents a user or entity through an image, initials, or icon.
+An accordion component that collapses and expands with animations.
 
 ## Installation 
 
