--- a/packages/web/content/docs/callout.mdx
+++ b/packages/web/content/docs/callout.mdx
@@ -6,7 +6,7 @@ category: components
 
 # Callout
 
-A Callout is a UI element designed to grab attention and highlight important information. 
+A Callout is a UI element designed to grab attention and highlight important information
 
 ## Installation 
 
