--- a/packages/web/content/docs/howtouse.mdx
+++ b/packages/web/content/docs/howtouse.mdx
@@ -55,7 +55,7 @@ export default function Home() {
 
 ## Alerts Example
 
-<ComponentPreview name="card"/>
+<ComponentPreview name="switch"/>
 
 ## Conclusion
 
