Adding Button text

--- a/packages/web/content/docs/button.mdx
+++ b/packages/web/content/docs/button.mdx
@@ -4,7 +4,7 @@ description: 'Interactive button component with various styles and states.'
 category: components
 ---
 
-# Button
+# Click Me Button
 
 A button component that follows best practices for accessibility and provides multiple variants for different use cases.
 
